src/test/ui/parser/unicode-chars.stderr
error: unknown start of token: \u{37e}
  --> $DIR/unicode-chars.rs:2:14
   |
LL |     let y = 0;
   |              ^
help: Unicode character ';' (Greek Question Mark) looks like ';' (Semicolon), but it is not
   |
LL |     let y = 0;
   |              ^

error: aborting due to previous error

